using UnityEngine;

namespace Sample.Factory.Sample1
{
    public interface BaseBulletFactory
    {
        BaseBullet Create();
    }
}